# wxGraph

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  gfs_meteogram_kcle.py  pyproject.toml  test_hrrr_integration.py  test_nomads_integration.py
.github/workflows/: ci.yml
docs/: gcp.md
examples/: run_example.py
scripts/: dev.sh  fetch.sh  serve.sh
src/wxgraph/: __init__.py  cli.py  config.py  runner.py  storage.py
src/wxgraph/alerts/: __init__.py  lcr_alert.py
src/wxgraph/backends/: __init__.py  base.py  cfgrib_helpers.py  herbie_backend.py  nomads_backend.py  nomads_urls.py  routed_backend.py
src/wxgraph/models/: __init__.py  aigfs.py  base.py  gefs.py  gfs.py  hgefs.py  hrrr.py  nam.py  rap.py
src/wxgraph/pipeline/: __init__.py  derive.py  icing.py  merge.py  normalize.py
src/wxgraph/ui/: __init__.py  frontend.py
systemd/: wxgraph-fetch.service  wxgraph-fetch.timer  wxgraph-serve.service
tests/: test_backends.py  test_derive.py  test_hrrr_integration_runner.py  test_icing.py  test_merge.py  test_models.py  test_nomads_integration_runner.py  test_normalize.py  test_runner.py  test_utils.py
web/: app.js  index.html  style.css
webapp/: server.py
